<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvCallorMsgTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#a0032bf5"
        android:text="@string/tvCallorMsgTitle"
        android:layout_marginBottom="10dp"
        android:textSize="28dp" />
    <Button
        android:id="@+id/btnCall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:text="@string/btnCall" />

    <Button
        android:id="@+id/btnSendMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:text="@string/btnSendMsg" />
</LinearLayout>
